# near-faucet-contracts

./: .gitignore  README.md
factory_contract/: Cargo.toml  README.MD  build.sh  ft.wasm
factory_contract/res/: factory_contract.wasm
factory_contract/src/: ft.wasm  lib.rs
factory_contract/tests/: workspaces.rs
faucet_contract/: Cargo.toml  README.md  build.sh  deploy.sh
faucet_contract/res/: faucet_contract.wasm
faucet_contract/src/: external.rs  fungible_tokens.rs  lib.rs  settings.rs  tests.rs
faucet_contract/tests/: workspaces.rs
ft_contract/: Cargo.toml  README.MD  build.sh
ft_contract/res/: ft_contract.wasm
ft_contract/src/: lib.rs  storage.rs
ft_contract/tests/: workspaces.rs
vault_contract/: Cargo.toml  README.MD  build.sh
vault_contract/src/: lib.rs
vault_contract/tests/: workspaces.rs
