[package]
name = "near-testnet-faucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.1.1"
near-contract-standards ="4.1.1"

[dev-dependencies]
anyhow = "1.0"
near-units = "0.2.0"
tokio = { version = "1.23", features = ["full"] }
workspaces = "0.7.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true